--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,38 +1,29 @@
-
-
-.App {
-  text-align: center;
-
+*{ 
+  background-color: rgb(233, 217, 238);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #e9f0fd;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgb(2, 2, 2);
+body{ 
   font-family: Didot;
-  font-size: larger;
 }
 
-.App-link {
-  color: #080808;
+
+main
+{ 
+  padding: 30px;
+  max: width 400px; 
+  margin:0 auto;
 }
 
+header
+{ 
+display: flex;
+justify-content: space-between;
+}
+
+header a { 
+  text-decoration: dashed;
+  color: black;
+}
 
 .card {
   /* Add shadows to create the "card" effect */
@@ -47,7 +38,5 @@
 
 /* Add some padding inside the card container */
 .container {
-  padding: 10px 30px;
-
+  padding: 2px 16px;
 }
-
