--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,5 +1,6 @@
 *{ 
-  background-color: rgb(233, 217, 238);
+  background-color: rgb(218, 232, 250);
+  
 }
 
 body{ 
@@ -18,6 +19,7 @@ header
 { 
 display: flex;
 justify-content: space-between;
+
 }
 
 header a { 
@@ -29,6 +31,8 @@ header a {
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  max-width: 400px;
+  max-height:600px;
 }
 
 /* On mouse-over, add a deeper shadow */
